lessons/142/go-app/deploy/3-deployment-service-b-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
        istio: monitor
    spec:
      containers:
      - image: 424432388155.dkr.ecr.us-east-1.amazonaws.com/go-app:latest
        imagePullPolicy: Always
        name: service-b
        ports:
        - name: http
          containerPort: 8080
