lessons/142/go-app/deploy/2-service-a.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: staging
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: service-a
