lessons/142/go-app/deploy/5-service-b.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: staging
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: service-b
