lessons/142/go-app/deploy/9-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: service-b
  namespace: staging
spec:
  parentRefs:
  - kind: Service
    name: service-b
    port: 8080
  rules:
  - backendRefs:
    - name: service-b-v1
      port: 8080
      weight: 90
    - name: service-b-v2
      port: 8080
      weight: 10
